package com.github.se.eduverse.model

data class Event(val id: String, var name: String, var description: String)

